k8s/adservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-adservice
spec:
  selector:
    matchLabels:
      app: eshop-adservice
  template:
    metadata:
      labels:
        app: eshop-adservice
    spec:
      containers:
        - name: eshop-adservice
          image: << SCR Public Endpoint URI >>/eshop-adservice:latest
          ports:
          - containerPort: 8095
      imagePullSecrets:
        - name: docker-config
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-adservice
spec:
  type: ClusterIP
  selector:
    app: eshop-adservice
  ports:
  - port: 8095
