k8s/cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-cartservice
spec:
  selector:
    matchLabels:
      app: eshop-cartservice
  template:
    metadata:
      labels:
        app: eshop-cartservice
    spec:
      containers:
        - name: eshop-cartservice
          image: << SCR Public Endpoint URI >>/eshop-cartservice:latest
          ports:
          - containerPort: 8091
      imagePullSecrets:
        - name: docker-config              
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-cartservice
spec:
  type: ClusterIP
  selector:
    app: eshop-cartservice
  ports:
  - port: 8091
