k8s/recommendservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-recommendservice
spec:
  selector:
    matchLabels:
      app: eshop-recommendservice
  template:
    metadata:
      labels:
        app: eshop-recommendservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: eshop-recommendservice
        image: << SCR Public Endpoint URI >>/eshop-recommendservice:latest
        ports:
        - containerPort: 8093
      imagePullSecrets:
        - name: docker-config
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-recommendservice
spec:
  type: ClusterIP
  selector:
    app: eshop-recommendservice
  ports:
  - name: api
    port: 8093
    targetPort: 8093
